welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:4: error: ';' expected but symbol literal found.
     else if ( tea<=5 && candy<=5 ) { 'outcome'==1 }
                                              ^teaParty:6: error: ';' expected but symbol literal found.
	else  if ( tea>= 2*candy || candy >= 2*tea ) { 'outcome'==2 }
                                                               ^